final test for user-and-post

--- a/app/views/components/_signup_nav.html.erb
+++ b/app/views/components/_signup_nav.html.erb
@@ -1,7 +1,7 @@
 <nav class="d-flex signup_navbar">
 	<a href="#">facebook</a>
 	<div class="ml-auto mr-5 mt-3 sign-in-form">
-
+	<div id = "signin_form-wrap">
 		<%= form_for(resource, as: resource_name, url: session_path(resource_name)) do |f| %>
 
 		<%= f.email_field :email, placeholder: "email" %>
@@ -9,5 +9,6 @@
 		<%= f.submit "Log In" , class: "ml-2" %>
 
 		<% end %>
+	</div>
 	</div>
 </nav>
