limit project scope

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,7 +5,7 @@
         <div class="row">
 				<div class="col-2 p-0 mt-3">
 					<div class="mx-auto profile-pic"></div>
-					<a href="<%= edit_user_path(current_user.id) %>" class="btn btn-primary mt-5 d-block mx-auto" href="#">Update profile</a>
+					<a href="#" class="btn btn-primary mt-5 d-block mx-auto" href="#">Update profile</a>
 				</div>
 
             <div class="col-5">
