--- a/app/views/components/_navi.html.erb
+++ b/app/views/components/_navi.html.erb
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg fixed-top navbar-light ">
 	<a href="<%= root_path%>" class="navbar-brand"><i class="fa fa-facebook-official fa-2x"></i></a>
 
-	<form class="form-inline" method='get' action="<%= users_path(:search) %>">
+	<form class="form-inline" method='get' action="<%= usersaffair_path(:search) %>">
 		<div class="input-group">
 			<input type="text" name='search' class="form-control" placeholder="search" style="width: 320px;height:30px">
 			<div class="input-group-prepend">
@@ -14,7 +14,7 @@
 
 	<div class="left-nav-link d-flex">
 		<div class="one">
-			<a href="<%= user_path(current_user.id)%>"><img src="#"> <%= current_user.lastname.capitalize %></a>
+			<a href="<%= usersaffair_path(current_user.id)%>"><img src="#"> <%= current_user.lastname.capitalize %></a>
 		</div>
 
 		<div class="one">
