--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -6,7 +6,7 @@
 		<div class="row">
 			<div class="col-2">
 				<div class="link-wrap p-1">
-					<a href="<%= usersaffair_path(current_user.id)%>"> <img src="" alt="name">
+					<a href="<%= user_path(current_user.id)%>"> <img src="" alt="name">
 						<%= current_user.firstname %></a> <br>
 
 					<div class="mt-2"><i class="fa fa-desktop"></i> some random link</div> <br>
