added general refactory of app; and extra feature on active record

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,7 +1,12 @@
+.pp{
+    width: 30px;
+    height: 30px;
+    border-radius: 100%;
+}
 .signup_navbar{
     width: 100%;
     height: 82px;
-    background: #2f00ff;
+    background: #0000b2;
 }
 .signup_navbar a{
     color: #fff;
