--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,10 +3,12 @@
 <body>
     <div class="container-fluid">
         <div class="row">
-				<div class="col-2 p-0 mt-3">
-					<div class="mx-auto profile-pic"></div>
-					<a href="#" class="btn btn-primary mt-5 d-block mx-auto" href="#">Update profile</a>
-				</div>
+            <div class="col-2 p-0 mt-3">
+                <div class="mx-auto profile-pic"></div>
+                <a href="<%= edit_user_registration_path %>" class="btn btn-primary mt-5 d-block mx-auto"
+                    href="#">Update
+                    profile</a>
+            </div>
 
             <div class="col-5">
                 <div class="main">
@@ -106,11 +108,11 @@
                     <% end %>
 
                 </div>
-						</div>
-						
-						<div class="col-3 p-0">
-							
-						</div>
+            </div>
+
+            <div class="col-3 p-0">
+
+            </div>
 
             <div class="col-2 p-0">
                 <div class="chat-side">
