--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,56 +1,58 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<h2 class="text-center">Edit <%= resource_name.to_s.humanize %></h2>
+<hr>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-<%= render "devise/shared/error_messages", resource: resource %>
+<body>
+  <div class="container">
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+    <%= render "devise/shared/error_messages", resource: resource %>
 
-<div class="field">
-  <%= f.label :lastname %><br />
-  <%= f.text_field :lastname, autofocus: true, autocomplete: "lastname" %>
-</div>
-<div class="field">
-  <%= f.label :firstname %><br />
-  <%= f.text_field :firstname, autofocus: true, autocomplete: "firstname" %>
-</div>
+    <div class="row">
+      <div class="col-8">
+        <div class="field text-center">
+          <%= f.label :avatar, 'Profile Picture' %>
+          <%= f.file_field :avatar, multiple: true, placeholder: " attach image to post", class: "mx-auto my-pic form-control" %>
+        </div>
+      </div>
 
-<div class="field">
-  <%= f.label :email %><br />
-  <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-</div>
+      <div class="col-4">
+        <div class="names d-flex">
+          <div class="field p-1">
 
-<div class="field">
-  <%= f.label :dob %><br />
-  <%= f.text_field :dob, autofocus: true %>
-</div>
-<div class="field">
-  <%= f.label :gender %><br />
-  <%= f.text_field :gender, autofocus: true, autocomplete: "gender" %>
-</div>
-<!-- 
-  <div class="field">
-    <%= f.file_field :avatar, multiple: true, placeholder: " attach image to post", class: "form-control" %>
-  </div> -->
+            <%= f.text_field :lastname, autofocus: true, autocomplete: "lastname", placeholder: 'Lastname' ,class: 'form-control' %>
+          </div>
+          <div class="field p-1">
 
-<div class="field">
-  <%= f.label :password %>
-  <% if @minimum_password_length %>
-  <em>(<%= @minimum_password_length %> characters minimum)</em>
-  <% end %><br />
-  <%= f.password_field :password, autocomplete: "new-password" %>
-</div>
+            <%= f.text_field :firstname, autofocus: true, autocomplete: "firstname", placeholder: 'Firstname' ,class: 'form-control' %>
+          </div>
+        </div>
 
-<div class="field">
-  <%= f.label :password_confirmation %><br />
-  <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-</div>
-<div class="actions">
-  <%= f.submit "Update" %>
-</div>
-<% end %>
+        <div class="field p-1">
+          <%= f.label :email %><br />
+          <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control' %>
+        </div>
 
-<h3>Cancel my account</h3>
+        <div class="field p-1">
+          <%= f.label :dob %><br />
+          <%= f.text_field :dob, autofocus: true , class: 'form-control'%>
+        </div>
+        <div class="field p-1">
+          <%= f.label :gender %><br />
+          <%= f.text_field :gender, autofocus: true, autocomplete: "gender",class: 'form-control' %>
+        </div>
 
-<p>Unhappy?
-  <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %>
-</p>
+        <div class="actions p-1 mt-2">
+          <%= f.submit "Update" , class: 'btn btn-primary'%>
+        </div>
 
-<%= link_to "Back", :back %>
+        <p class="p-1">
+          <%= link_to "Back", :back %>
+        </p>
+
+
+      </div>
+      <% end %>
+
+    </div>
+
+  </div>
+</body>
