--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,5 @@
 <%= provide(:title,'users') %>
+
 <body>
     <div class="container">
         <div class="row">
@@ -7,9 +8,13 @@
                 <div class="card">
 
                     <div class="card-body d-flex">
-                        <img src="" alt="user-pics">
+                        <% if user.avatar.attached? %>
+                        <img src="<%= user.avatar.last %>" alt="user-pics">
+                        <% else %>
+                        <img src="<%= asset_path('default_avatar.png') %>" alt="user-pics">
+                        <% end %>
                         <h3 class="mx-auto"><%= user.lastname %> <%= user.firstname %> </h3>
-                        <button class="btn btn-primary ml-auto" style="height: 35px;">Add Friend</button> 
+                        <button class="btn btn-primary ml-auto" style="height: 35px;">Add Friend</button>
                     </div>
 
                 </div>
