--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,36 +1,39 @@
 <%= provide(:title,'update profile') %>
 
 <h2 class="text-center">Edit <%= resource_name.to_s.humanize %></h2>
-<hr>
+<hr />
 
 <body>
   <div class="container">
-    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-    <%= render "devise/shared/error_messages", resource: resource %>
+    <%= form_for(resource, as: resource_name, url:
+    registration_path(resource_name), html: { method: :put }) do |f| %> <%=
+    render "devise/shared/error_messages", resource: resource %>
 
     <div class="row">
       <div class="col-8">
         <div class="field text-center">
-          <%= f.label :avatar, 'Profile Picture' %>
-          <%= f.file_field :avatar, multiple: true, placeholder: " attach image to post", class: "mx-auto my-pic form-control" %>
+          <%= f.label :avatar, 'Profile Picture' %> <%= f.file_field :avatar,
+          multiple: true, placeholder: " attach image to post", class: "mx-auto
+          my-pic form-control" %>
         </div>
       </div>
 
       <div class="col-4">
         <div class="names d-flex">
           <div class="field p-1">
-
-            <%= f.text_field :lastname, autofocus: true, autocomplete: "lastname", placeholder: 'Lastname' ,class: 'form-control' %>
+            <%= f.text_field :lastname, autofocus: true, autocomplete:
+            "lastname", placeholder: 'Lastname' ,class: 'form-control' %>
           </div>
           <div class="field p-1">
-
-            <%= f.text_field :firstname, autofocus: true, autocomplete: "firstname", placeholder: 'Firstname' ,class: 'form-control' %>
+            <%= f.text_field :firstname, autofocus: true, autocomplete:
+            "firstname", placeholder: 'Firstname' ,class: 'form-control' %>
           </div>
         </div>
 
         <div class="field p-1">
           <%= f.label :email %><br />
-          <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control' %>
+          <%= f.email_field :email, autofocus: true, autocomplete: "email",
+          class: 'form-control' %>
         </div>
 
         <div class="field p-1">
@@ -39,7 +42,8 @@
         </div>
         <div class="field p-1">
           <%= f.label :gender %><br />
-          <%= f.text_field :gender, autofocus: true, autocomplete: "gender",class: 'form-control' %>
+          <%= f.text_field :gender, autofocus: true, autocomplete:
+          "gender",class: 'form-control' %>
         </div>
 
         <div class="actions p-1 mt-2">
@@ -49,12 +53,8 @@
         <p class="p-1">
           <%= link_to "Back", :back %>
         </p>
-
-
       </div>
       <% end %>
-
     </div>
-
   </div>
 </body>
