resolved stickler issues;again

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
   <%= render 'components/header' %> <%= render 'components/shims' %>
 
   <body>
-    <% if is_signup_path? || !user_signed_in? %> <%= render
+    <% if signup_path? || !user_signed_in? %> <%= render
     'components/signup_nav' %> <% else %> <%= render 'components/navi' %> <% end
     %> <%= render 'components/flash' %> <%= yield %>
   </body>
