--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 <%= provide(:title,'Timeline') %>
 
 <body>
-  <div class="container-fluid">
+  <div class="container-fluid" id="post-my-profile">
     <div class="row">
       <div class="col-2 p-0 mt-3">
         <div class="mx-auto profile-pic">
