--- a/app/views/components/_signup_nav.html.erb
+++ b/app/views/components/_signup_nav.html.erb
@@ -1,7 +1,7 @@
 <nav class="d-flex fixed-top signup_navbar">
   <a href="#">facebook</a>
   <div class="ml-auto mr-5 mt-3 sign-in-form">
-    <div id="signin_form-wrap">
+    <div id="signin-form-wrap">
       <%= form_for(resource, as: resource_name, url:
       session_path(resource_name)) do |f| %> <%= f.email_field :email,
       placeholder: "email" %> <%= f.password_field :password,
