--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -4,7 +4,7 @@
 <hr />
 
 <body>
-  <div class="container">
+  <div class="container" id="post-my-profile-edit">
     <%= form_for(resource, as: resource_name, url:
     registration_path(resource_name), html: { method: :put }) do |f| %>
     <%= render "devise/shared/error_messages", resource: resource %>
