--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -7,7 +7,7 @@
       <div class="col-4 ">
         <h2>Create a New Account</h2>
         <p>It’s quick and easy.</p>
-        <div id="signup_form-wrap">
+        <div id="signup-form-wrap">
           <%= form_for(resource, as: resource_name, url:
           registration_path(resource_name)) do |f| %>
           <%= render "devise/shared/error_messages", resource: resource %>
@@ -35,7 +35,7 @@
             birthday' %>
           </div>
           <div class="field p-1 mt-2">
-            <%= f.label :gender, "Gender" %><br />
+            <span> "Gender" %></span><br />
 
             <div class="col-9 mr-auto">
               <div class="d-flex justify-content-around">
