--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,7 +2,7 @@
 
 <body>
 
-	<div class="container-fluid">
+	<div class="container-fluid " id="post-index">
 		<div class="row">
 			<div class="col-2">
 				<div class="link-wrap p-1">
