--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -17,7 +17,7 @@
 
 					<div class="card-footer">
 						<div class="d-flex justify-content-around">
-							<% if has_user_like_post?( true, current_user.id, @post.id ) == false %>
+							<% if user_like_post?( true, current_user.id, @post.id ) == false %>
 							<i>
 								<%= form_for(@like, :url => likes_path,:remote => true )do | f | %>
 								<%= f.hidden_field :post_id, :value => "#{@post.id}" %>
