changes before tse suggested changes

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -2,7 +2,8 @@ img[alt="default_avatar"]{
     width: 25px;   
 }
 .profile-avatar{
-    width: 25px;
+    width: 28px;
+    height: 28px;
     border-radius: 100%;
 }
 .sho-profile-avatar{
