--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -17,7 +17,7 @@
 
 					<div class="card-footer">
 						<div class="d-flex justify-content-around">
-							<% if user_like_post?( true, current_user.id, @post.id ) == false %>
+							<% if !current_user.liked_posts.ids.include?(p.id) %>
 							<i>
 								<%= form_for(@like, :url => likes_path,:remote => true )do | f | %>
 								<%= f.hidden_field :post_id, :value => "#{@post.id}" %>
@@ -27,7 +27,7 @@
 							</i>
 							<% else %>
 							<i>
-								<%= link_to 'unlike', like_path(unlike_id(true, current_user.id, @post.id) ), class: 'btn btn-info pl-5 pr-5', method: :delete %>
+								<%= link_to 'unlike', like_path(current_user.likes.ids ), class: 'btn btn-info pl-5 pr-5', method: :delete %>
 							</i>
 							<% end %>
 							<a href="#" class="btn btn-info pl-4 pr-4"><i class="fa fa-comment ">
@@ -38,8 +38,8 @@
 
 						<div class="card-footer d-flex justify-content-between">
 							<aside class="left">
-								<% if @post.author.avatar.attached? %>
-								<%= image_tag @post.author.avatar.first, class: "img-fluid profile-avatar" %>
+								<% if current_user.avatar.attached? %>
+								<%= image_tag current_user.avatar.reverse.first, class: "img-fluid profile-avatar" %>
 								<% else %>
 								<img src="<%= asset_path('default_avatar.png')%>" alt="default_avatar">
 								<% end %>
