--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -38,7 +38,8 @@
 							<div class="card-body">
 
 								<!-- Button trigger modal -->
-								<button type="button" class="btn poster p-3" data-toggle="modal" data-target="#exampleModal">
+								<button type="button" class="btn poster p-3" data-toggle="modal"
+									data-target="#exampleModal">
 									What is on your mind ?
 								</button>
 							</div>
@@ -52,8 +53,8 @@
 
 
 					<!-- Modal -->
-					<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-						aria-hidden="true">
+					<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog"
+						aria-labelledby="exampleModalLabel" aria-hidden="true">
 						<div class="modal-dialog" role="document">
 							<div class="modal-content">
 								<%= form_for(:post, url: posts_path) do |f| %>
@@ -159,7 +160,7 @@
 								</div>
 								<br>
 								<div class="tally-table d-flex justify-content-around">
-									<small><%= p.likes.where(status: true).count %>like(s)</small>
+									<small><%= p.likes.count %>like(s)</small>
 									<small><%= p.comments.count %>comment(s)</small>
 								</div>
 								<hr>
