--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,19 +3,24 @@
 <body>
   <div class="container">
     <div class="row">
-      <div class="mx-auto col-6">
+      <div class="mx-auto col-7">
         <% @users.each do | user |%>
         <div class="card">
-          <div class="card-body d-flex">
-            <% if user.avatar.attached? %>
-            <%= image_tag user.avatar.first,alt:'user-pics',class: "img-fluid" %>
-            <% else %>
-            <img src="<%= asset_path('default_avatar.png') %>" alt="user-pics" />
-            <% end %>
-            <h3 class="mx-auto"><%= user.lastname %> <%= user.firstname %></h3>
-            <button class="btn btn-primary ml-auto" style="height: 35px;">
-              Add Friend
-            </button>
+          <div class="card-body pt-1 pb-1">
+            <div class="d-flex mt-2">
+              <% if user.avatar.attached? %>
+              <%= image_tag user.avatar.first,alt:'user-pics',class: "img-fluid" %>
+              <% else %>
+              <img src="<%= asset_path('default_avatar.png') %>" alt="user-pics" />
+              <% end %>
+              <h3 class="mx-auto mt-4"><%= user.lastname %> <%= user.firstname %></h3>
+              <button class="btn btn-primary ml-auto btn-sm mt-3" style="height: 35px;">
+                Add Friend
+              </button>
+              <button class="btn btn-default ml-1 btn-sm mt-3" style="height: 35px;">
+                Remove
+              </button>
+            </div>
           </div>
         </div>
         <% end %>
