--- a/app/views/components/_notification.html.erb
+++ b/app/views/components/_notification.html.erb
@@ -12,6 +12,7 @@
 			<% if !@recieved_request.nil? %>
 			<div class="modal-body pt-0 pb-0">
 				<% @recieved_request.each do | user | %>
+				<% if !current_user.approved_friend.include?(user.id) %>
 				<div class="d-flex mt-2">
 					<% if user.avatar.attached? %>
 					<%= image_tag user.avatar.first,alt:'user-pics-2',class: "img-fluid" %>
@@ -20,8 +21,9 @@
 					<% end %>
 					<h3 class="mx-auto notify-name"><%= user.lastname %> <%= user.firstname %></h3>
 					<%= link_to 'Accept', friendship_path(@path_id.pop), {:style =>'height: 30px',:class =>'btn btn-light ml-1 btn-sm mt-1', :method => 'put'} %>
-					<%= link_to 'Accept', '#', {:style =>'height: 30px',:class =>'btn btn-secondary ml-1 btn-sm mt-1'} %>
+					<%= link_to 'Discard', '#', {:style =>'height: 30px',:class =>'btn btn-secondary ml-1 btn-sm mt-1'} %>
 				</div>
+				<% end %>
 				<% end %>
 			</div>
 			<% else %>
