--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -75,7 +75,7 @@
                   <% if p.avatar.empty? %>
 
                   <a href="#">
-                    <%= p.author.lastname.capitalize %> <%= p.author.firstname.capitalize %>
+                    <%= p.author.names.capitalize %>
                   </a>
                   <i class="fa fa-ellipsis-h float-right"></i>
                   <div class="text-content p-1 mt-1">
@@ -85,7 +85,7 @@
                   <% else %>
 
                   <a href="#">
-                    <%= p.author.lastname.capitalize %> <%= p.author.firstname.capitalize %>
+                    <%= p.author.names.capitalize %>
                   </a>
                   <i class="fa fa-ellipsis-h float-right"></i>
                   <div class="text-content p-1 mt-1">
@@ -121,7 +121,23 @@
         </div>
       </div>
 
-      <div class="col-3 p-0"></div>
+      <div class="col-3">
+        <div class="card">
+          <div class="card-header"> My Friends </div>
+          <% current_user.find_friend(current_user.approved_friend).each do | myfriend | %>
+          <div class="card-body d-flex">
+            <% if myfriend.avatar.attached? %>
+            <%= image_tag myfriend.avatar.first,alt:'friend-pics',class: "img-fluid" %>
+            <% else %>
+            <img src="<%= asset_path('default_avatar.png') %>" alt="friend-pics" />
+            <% end %>
+            <span class="text-capitalize mx-auto"><%= myfriend.names %>
+            </span>
+            <a href="#"> unfriend </a>
+          </div>
+          <% end %>
+        </div>
+      </div>
 
       <div class="col-2 p-0">
         <div class="chat-side">
