added some unit test

--- a/app/views/components/_navi.html.erb
+++ b/app/views/components/_navi.html.erb
@@ -41,7 +41,7 @@
 				<button type="button" class="fa fa-bell fa-md notify-count-but" data-toggle="modal"
 					data-target="#notification">
 				</button>
-				<% if @recieved_request.count > 0 %>
+				<% if @recieved_request != nil && @recieved_request.count > 0 %>
 				<small data-toggle="modal" data-target="#notification" class="notify-count">
 					<%= @recieved_request.count %>
 				</small>
