--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -20,12 +20,10 @@
       <div class="col-4">
         <div class="names d-flex">
           <div class="field p-1">
-            <%= f.text_field :lastname, autofocus: true, autocomplete:
-            "lastname", placeholder: 'Lastname' ,class: 'form-control' %>
+            <%= f.text_field :lastname, placeholder: 'Lastname' ,class: 'form-control' %>
           </div>
           <div class="field p-1">
-            <%= f.text_field :firstname, autofocus: true, autocomplete:
-            "firstname", placeholder: 'Firstname' ,class: 'form-control' %>
+            <%= f.text_field :firstname , placeholder: 'Firstname' ,class: 'form-control' %>
           </div>
         </div>
 
