--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,7 +6,7 @@
       <div class="mx-auto col-6">
         <% @users.each do | user |%>
         <div class="card">
-          <% if !current_user.approved_friend.include?(user.id) %>
+          <% if !current_user.approved_friend.include?(user.id) && !current_user.pending_friends_arr.include?(user.id) %>
           <div class="card-body pt-1 pb-1">
             <div class="d-flex mt-2">
               <% if user.avatar.attached? %>
